# pocketdoom

./: .gitignore  CMakeLists.txt  README.TXT  README.md  doomgeneric_pocketbook.c  makearm.sh
src/: d_iwad.c  d_main.c  doomgeneric  doomgeneric.map  doomgeneric_xlib.c  i_system.c  i_video.c  m_config.c
